Set next development version to 25.10.1-SNAPSHOT
(cherry picked from commit fd8a2c9756e1d6282cc5ca05fbb0ca4c8953a71a)